--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,14 +1,4 @@
 
-<div *ngIf=selectedHero>
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-
-  <div>
-    <label>Name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
-    </label>
-  </div> 
-</div>
 
 
 <h2>My Heroes
@@ -21,3 +11,6 @@
     <span class="badge">{{h.id}}</span> {{h.name}}
   </li>
 </ul>
+
+
+<app-hero-detail [hero]="selectedHero" ></app-hero-detail>
